🛠️ refactor: 리펙토링
🔗 Resolves: #42